--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="css/icon-font.css">
 
 
-  <link rel="stylesheet" href="sass/main.min.css">
+  <link rel="stylesheet" href="main.min.css">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
 
